--- a/Exercicio1-Calculadora/backup/calculadora.lpi
+++ b/Exercicio1-Calculadora/backup/calculadora.lpi
@@ -37,7 +37,7 @@
       <Unit>
         <Filename Value="unit1.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="Form1"/>
+        <ComponentName Value="fView"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
